--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,6 @@ TowerDefenseSFML.vcxproj.filters
 TowerDefenseSFML.vcxproj.user
 TowerDefenseSFML.aps
 TowerDefenseSFML.rc
+resource.h
 Debug/
 oldResources/
